--- a/sistema_metodos_agiles/loginApp/templates/login.html
+++ b/sistema_metodos_agiles/loginApp/templates/login.html
@@ -18,7 +18,7 @@
             d="m 40,120.00016 239.99984,-3.2e-4 c 0,0 24.99263,0.79932 25.00016,35.00016 0.008,34.20084 -25.00016,35 -25.00016,35 h -239.99984 c 0,-0.0205 -25,4.01348 -25,38.5 0,34.48652 25,38.5 25,38.5 h 215 c 0,0 20,-0.99604 20,-25 0,-24.00396 -20,-25 -20,-25 h -190 c 0,0 -20,1.71033 -20,25 0,24.00396 20,25 20,25 h 168.57143" />
         </svg>
         <div class="form">
-          <label for="usuario">Inicie Sesi&oacute;n o registrese con Google</label><br><br>
+          <label for="usuario"></label><br><br>
           <a href="{% url 'social:begin' 'google-oauth2' %}"><img id="imagen" src="../static/imagenes/botonGoogle.png"></a>
         </div>
       </div>
