Vista de Crear Proyecto Lista FRONT

--- a/sistema_metodos_agiles/webApp/templates/accounts/base.html
+++ b/sistema_metodos_agiles/webApp/templates/accounts/base.html
@@ -15,6 +15,7 @@
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <link href="/static/assets/demo/demo.css" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'index.css' %}">
+    <link rel="stylesheet" href="{% static 'form.css' %}">
     <title>Login</title>
 </head>
 
