--- a/sistema_metodos_agiles/webApp/templates/includes/sidebar.html
+++ b/sistema_metodos_agiles/webApp/templates/includes/sidebar.html
@@ -24,7 +24,14 @@
               <p>Proyectos</p>
             </a>
           </li>
-
+          <ul>
+            <li class="nav-item {% if 'page-user' in segment %} active {% endif %}">
+              <a class="nav-link" href="{% url 'webApp:CrearProyecto' %}">
+                <i class="material-icons">person</i>
+                <p>Crear un proyecto</p>
+              </a>
+            </li>
+          </ul>
           <li class="nav-item {% if 'ui-tables' in segment %} active {% endif %}">
             <a class="nav-link" href="{% url 'webApp:usuarios' %}">
               <i class="material-icons">library_books</i>
