--- a/sistema_metodos_agiles/webApp/templates/base.html
+++ b/sistema_metodos_agiles/webApp/templates/base.html
@@ -10,6 +10,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Login</title>
     <link rel="stylesheet" href="{% static 'index.css' %}">
+    <link rel="stylesheet" href="../static/assets/js/index.js">
 </head>
 
 <body>
