--- a/sistema_metodos_agiles/webApp/templates/home/index.html
+++ b/sistema_metodos_agiles/webApp/templates/home/index.html
@@ -6,7 +6,7 @@
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
-  {% if data.activo %}
+  {% if userSession.activo %}
   <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-6">
       <div class="card card-stats">
