--- a/sistema_metodos_agiles/webApp/templates/home/index.html
+++ b/sistema_metodos_agiles/webApp/templates/home/index.html
@@ -6,86 +6,64 @@
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
-  {% if userSession.activo %}
-  <div class="row">
-    <div class="col-lg-3 col-md-6 col-sm-6">
-      <div class="card card-stats">
-        <div class="card-header card-header-warning card-header-icon">
-          <div class="card-icon">
-            <i class="material-icons">content_copy</i>
-          </div>
-          <p class="card-category">Used Space</p>
-          <h3 class="card-title">49/50
-            <small>GB</small>
-          </h3>
-        </div>
-        <div class="card-footer">
-          <div class="stats">
-            <i class="material-icons text-danger">warning</i>
-            <a href="#pablo">Get More Space...</a>
-          </div>
-        </div>
+  {% if userSession.df_rol.id == 1 %}
+  <div class="card card-stats m-3">
+    <div class="card-header card-header-warning card-header-icon">
+      <div class="card-icon">
+        <i class="material-icons">content_copy</i>
       </div>
+      <p class="card-category">Proyectos</p>
+      <h3 class="card-title">
+        <small>Catidad</small>
+      </h3>
+
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-6">
-      <div class="card card-stats">
-        <div class="card-header card-header-success card-header-icon">
-          <div class="card-icon">
-            <i class="material-icons">store</i>
-          </div>
-          <p class="card-category">Revenue</p>
-          <h3 class="card-title">$34,245</h3>
-        </div>
-        <div class="card-footer">
-          <div class="stats">
-            <i class="material-icons">date_range</i> Last 24 Hours
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-6">
-      <div class="card card-stats">
-        <div class="card-header card-header-danger card-header-icon">
-          <div class="card-icon">
-            <i class="material-icons">info_outline</i>
-          </div>
-          <p class="card-category">Fixed Issues</p>
-          <h3 class="card-title">75</h3>
-        </div>
-        <div class="card-footer">
-          <div class="stats">
-            <i class="material-icons">local_offer</i> Tracked from Github
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-6">
-      <div class="card card-stats">
-        <div class="card-header card-header-info card-header-icon">
-          <div class="card-icon">
-            <i class="fa fa-twitter"></i>
-          </div>
-          <p class="card-category">Followers</p>
-          <h3 class="card-title">+245</h3>
-        </div>
-        <div class="card-footer">
-          <div class="stats">
-            <i class="material-icons">update</i> Just Updated
-          </div>
-        </div>
+    <div class="card-footer">
+      <div class="stats">
+        <i class="material-icons ">developer_board</i>
+        <a href="#pablo">Ver proyectos</a>
       </div>
     </div>
   </div>
   {% else %}
+        {% if userSession.activo %}
+        <div class="d-flex">
+          {% for proyecto in proyectos %}
+          
+          <div class="card card-stats m-3">
+            <div class="card-header card-header-warning card-header-icon">
+              <div class="card-icon">
+                <i class="material-icons">content_copy</i>
+              </div>
+              <p class="card-category">{{proyecto.nombre_proyecto}}</p>
+              <h3 class="card-title">
+                <small>Sprint {{proyecto.sprint_dias}} dias</small>
+              </h3>
+              <h3 class="card-title">
+                <small>Rol {{proyecto.descripcion_rol}}</small>
+              </h3>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons ">developer_board</i>
+                <a href="{% url 'webApp:verProyecto' proyecto.id %}">Ver proyecto</a>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
 
-
-    <div class="row">
-      <div class="col">
-        <h1>Rol observador hasta que el admin otorgue permisos </h1>
-      </div>
-    </div>
-
+        </div>
+        {% else %}
+          <div class="row">
+            <div class="col">
+              <h1>Rol observador hasta que el admin otorgue permisos </h1>
+            </div>
+          </div>
+        {% endif %}
   {% endif %}
+
+
+
   
 
 {% endblock content %}
