--- a/sistema_metodos_agiles/webApp/templates/home/proyectos.html
+++ b/sistema_metodos_agiles/webApp/templates/home/proyectos.html
@@ -14,6 +14,7 @@
     <table class="table">
       <thead>
         <tr>
+          <th scope="col"></th>
           <th scope="col"><b>Nombre</b></th>
           <th scope="col"><b>Descripcion</b></th>
           <th scope="col"><b>Fecha Inicio</b></th>
@@ -22,27 +23,28 @@
         </tr>
       </thead>
       <tbody>
+        {% for proyecto in proyectos %}
         <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-          <td>@mdo</td>
+          <td>
+            {{forloop.counter}}
+          </td>
+          <td>
+            {{proyecto.nombre_proyecto}}
+          </td>
+          <td>
+            {{proyecto.descripcion_proyecto}}
+          </td>
+          <td>
+            {{proyecto.fecha_ini_proyecto}}
+          </td>
+          <td>
+            {{proyecto.fecha_fin_proyecto}}
+          </td>
+          <td>
+            {{proyecto.miembro_proyecto.descripcion}}
+          </td>
         </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td colspan="2">Larry the Bird</td>
-          <td>@twitter</td>
-          <td>@mdo</td>
-        </tr>
-      </tbody>
+        {% endfor %}
     </table>
 </div>
 
