--- a/sistema_metodos_agiles/webApp/templates/includes/sidebar.html
+++ b/sistema_metodos_agiles/webApp/templates/includes/sidebar.html
@@ -9,14 +9,17 @@
         <ul class="nav">
           
 
-        <li class="nav-item {% if 'index' in segment %} active {% endif %}">
-          <a class="nav-link" href="/">
-            <i class="material-icons">dashboard</i>
-            <p>Inicio</p>
-          </a>
-        </li>
+          <li class="nav-item {% if 'index' in segment %} active {% endif %}">
+            <a class="nav-link" href="/">
+              <i class="material-icons">dashboard</i>
+              <p>Inicio</p>
+            </a>
+          </li>
+
 
          
+          
+          {% if userSession.df_rol.id == 1 %}
           <li class="nav-item {% if 'page-user' in segment %} active {% endif %}">
             <a class="nav-link" href="{% url 'webApp:proyectos' %}">
               <i class="material-icons">developer_mode</i>
@@ -37,6 +40,9 @@
               <p>Usuarios</p>
             </a>
           </li>
+          {% endif %}
+
+
 
         </ul>
       </div>
