Se agrega el manejo de roles por proyecto

--- a/sistema_metodos_agiles/webApp/templates/includes/options.html
+++ b/sistema_metodos_agiles/webApp/templates/includes/options.html
@@ -4,7 +4,7 @@
       <ul class="navbar-nav mr-auto">
 
           <li class="class="nav-item"">
-            <a class="nav-link " href="{% url 'webApp:rolesProyecto' %}"  >
+            <a class="nav-link " href="{% url 'webApp:rolesProyecto' proyecto.id %}"  >
                 <i class="material-icons">block</i>
                Roles del Proyecto 
               </a>
