--- a/sistema_metodos_agiles/webApp/templates/includes/sidebar.html
+++ b/sistema_metodos_agiles/webApp/templates/includes/sidebar.html
@@ -16,6 +16,14 @@
             </a>
           </li>
 
+          {% if 'verProyecto' in segment %}
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <i class="material-icons">border_color</i>
+              <p>Gestion del proyecto</p>
+            </a>
+          </li>
+          {% endif %}
 
          
           
