--- a/sistema_metodos_agiles/webApp/templates/includes/options.html
+++ b/sistema_metodos_agiles/webApp/templates/includes/options.html
@@ -10,12 +10,11 @@
               </a>
           </li>
           <li class="class="nav-item"">
-            <a class="nav-link " href="#"  >
+            <a class="nav-link " href="{% url 'webApp:colaboradoresProyecto' proyecto.id %}"  >
                 <i class="material-icons">account_circle</i>
                Colaboradores 
               </a>
           </li>
-
       </ul>
 
       <p class="my-2 my-lg-0 mr-sm-4">Rol : {{proyecto.descripcion_rol}}</p>
