--- a/sistema_metodos_agiles/webApp/templates/home/colaboradoresProyecto.html
+++ b/sistema_metodos_agiles/webApp/templates/home/colaboradoresProyecto.html
@@ -21,14 +21,18 @@
             <form method="post" action="{% url 'webApp:asignarColaboradorProyecto' proyecto.id %}">
                 {% csrf_token %}
                 <div class="form-group">
-                  <label for="recipient-name" class="col-form-label" >Descripcion de rol</label>
-                  <input type="text" class="form-control" id="recipient-name" name="descripcion">
+                  <select class="form-control" aria-label="Default select example" name="usuario">
+                    <option selected>Seleccionar usuario</option>
+                    {% for usuario in usuarios %}
+                    <option value="{{usuario.id}}">{{usuario.nombre}} {{usuario.apellido}}</option>
+                    {% endfor %}
+                  </select>
                 </div>
                 <div class="form-group">
-                  <select class="form-control" aria-label="Default select example" name="scrumMaster">
-                    <option selected>Seleccionar el Scrum Master</option>
+                  <select class="form-control" aria-label="Default select example" name="rol">
+                    <option selected>Seleccionar rol</option>
                     {% for rolProyecto in rolesProyecto %}
-                    <option value="{{rolProyecto.id}}">{{rolProyecto.nombre}} {{rolProyecto.apellido}}</option>
+                    <option value="{{rolProyecto.id_rol}}">{{rolProyecto.nombre_rol}}</option>
                     {% endfor %}
                   </select>
                 </div>
@@ -57,12 +61,30 @@
                         <th>
                           Nombre del Colaborador 
                         </th>
+                        <th>
+                          Email
+                        </th>
+                        <th>
+                          Nombre del Rol 
+                        </th>
+                        <th>
+                          Descripcion del Rol
+                        </th>
                       </thead>
                       <tbody>
                         {% for colaborador in colaboradores %}
                         <tr>
                           <td>
                             {{forloop.counter}}
+                          </td>
+                          <td>
+                            {{colaborador.nombre}} {{colaborador.apellido}}
+                          </td>
+                          <td>
+                            {{colaborador.email}}
+                          </td>
+                          <td>
+                            {{colaborador.nombre_rol}}
                           </td>
                           <td>
                             {{colaborador.descripcion_rol}}
