--- a/sistema_metodos_agiles/webApp/templates/includes/options.html
+++ b/sistema_metodos_agiles/webApp/templates/includes/options.html
@@ -1,14 +1,19 @@
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
 
-          <li class="class="nav-item"">
-            <a class="nav-link " href="{% url 'webApp:rolesProyecto' proyecto.id %}"  >
-                <i class="material-icons">block</i>
-               Roles del Proyecto 
-              </a>
-          </li>
+ 
+        <li class="class="nav-item">
+          <a class="nav-link " href="{% url 'webApp:rolesProyecto' proyecto.id %}"  >
+              <i class="material-icons">block</i>
+             Roles del Proyecto 
+            </a>
+        </li>
+  
+
+
           <li class="class="nav-item"">
             <a class="nav-link " href="{% url 'webApp:colaboradoresProyecto' proyecto.id %}"  >
                 <i class="material-icons">account_circle</i>
