--- a/sistema_metodos_agiles/webApp/templates/layouts/base.html
+++ b/sistema_metodos_agiles/webApp/templates/layouts/base.html
@@ -26,7 +26,7 @@
   <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-material">
 
   <title>
-    Django Material Dashboard - {% block title %}{% endblock %} | AppSeed
+    Sistema de Gestion de proyectos {% block title %}{% endblock %}
   </title>
 
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
