-US en la vista GestionProyecto.html con errores

--- a/sistema_metodos_agiles/webApp/templates/home/proyectos.html
+++ b/sistema_metodos_agiles/webApp/templates/home/proyectos.html
@@ -41,7 +41,7 @@
             {{proyecto.fecha_fin_proyecto}}
           </td>
           <td>
-            {{proyecto.miembro_proyecto.descripcion}}
+            {{proyecto.miembro_proyecto.miembro_usuario}}
           </td>
         </tr>
         {% endfor %}
