--- a/sistema_metodos_agiles/webApp/templates/includes/sidebar.html
+++ b/sistema_metodos_agiles/webApp/templates/includes/sidebar.html
@@ -18,7 +18,7 @@
 
           {% if 'verProyecto' in segment %}
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'webApp:GestionProyecto' %}">
               <i class="material-icons">border_color</i>
               <p>Gestion del proyecto</p>
             </a>
