--- a/sistema_metodos_agiles/webApp/templates/includes/options.html
+++ b/sistema_metodos_agiles/webApp/templates/includes/options.html
@@ -4,7 +4,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
 
- {% if validacionPermisos.dsp_Roles %}
+      {% if validacionPermisos.dsp_Roles %}
         <li class="class="nav-item">
           <a class="nav-link " href="{% url 'webApp:rolesProyecto' proyecto.id %}"  >
               <i class="material-icons">block</i>
@@ -18,6 +18,14 @@
             <a class="nav-link " href="{% url 'webApp:colaboradoresProyecto' proyecto.id %}"  >
                 <i class="material-icons">account_circle</i>
                Colaboradores 
+              </a>
+          </li>
+          {% endif %}
+          {% if validacionPermisos.dsp_Colaborador %}
+          <li class="class="nav-item"">
+            <a class="nav-link " href="{% url 'webApp:tipoUs' proyecto.id %}"  >
+                <i class="material-icons">apps</i>
+               Tipos de US 
               </a>
           </li>
           {% endif %}
