--- a/sistema_metodos_agiles/webApp/templates/home/vistaProyectos.html
+++ b/sistema_metodos_agiles/webApp/templates/home/vistaProyectos.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% include 'includes/options.html' %}
 <div class="container-fluid">
-    <h3 class=" ">Tabla Kamban -- Proyecto {{proyecto.nombre_proyecto | title }}</h3>
+    <h3 class=" ">Tabla Kamban</h3>
     <div class="row flex-row flex-sm-nowrap py-3">
         <div class="col-sm-6 col-md-4 col-xl-3">
             <div class="card ">
