--- a/sistema_metodos_agiles/webApp/templates/home/tipoUS.html
+++ b/sistema_metodos_agiles/webApp/templates/home/tipoUS.html
@@ -6,35 +6,31 @@
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
-
+{% include 'includes/options.html' %}
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Nuevo Rol</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Nuevo Tipo de User Story</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-            <form method="post" action="{% url 'webApp:crearRolProyecto' proyecto.id %}">
+            <form method="post" action="{% url 'webApp:crearTUSProyecto' proyecto.id %}">
                 {% csrf_token %}
                 <div class="form-group">
-                  <label for="recipient-name" class="col-form-label" >Nombre del Rol</label>
-                  <input type="text" class="form-control" id="recipient-name" name="nombre_rol">
+                  <label for="recipient-name" class="col-form-label" >Nombre</label>
+                  <input type="text" class="form-control" id="recipient-name" name="nombre">
                 </div>
                 <div class="form-group">
-                  <label for="recipient-name" class="col-form-label" >Descripcion de rol</label>
+                  <label for="recipient-name" class="col-form-label" >Descripcion</label>
                   <input type="text" class="form-control" id="recipient-name" name="descripcion">
                 </div>
                 <div class="form-group">
-                    <select class="form-select" multiple aria-label="multiple select example" name="permisos">
-                        <option selected disabled>Seleccionar los permisos</option>
-                        {% for permiso in permisos %}
-                        <option value="{{permiso.id}}">{{permiso.descripcion_permiso}}</option>
-                        {% endfor %}
-                      </select>
+                  <label for="recipient-name" class="col-form-label" >Prioridad</label>
+                  <input type="number" class="form-control" id="recipient-name" name="prioridad">
                 </div>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                 <button type="submit" class="btn btn-primary">Guardar</button>
@@ -58,27 +54,32 @@
                   <div class="table-responsive">
                     <table class="table">
                       <thead class=" text-primary">
-                        <th>
-                          
+                        <th>                         
                         </th>
                         <th>
-                          Nombre del Rol
+                          Nombre 
                         </th>
                         <th>
-                          Descripcion del Rol
+                          Descripcion 
+                        </th>
+                        <th>
+                          Prioridad 
                         </th>
                       </thead>
                       <tbody>
-                        {% for rolProyecto in rolesProyecto %}
+                        {% for data in tipoUs %}
                         <tr>
                           <td>
                             {{forloop.counter}}
                           </td>
                           <td>
-                            {{rolProyecto.nombre_rol}}
+                            {{data.nombre_tipo_us}}
                           </td>
                           <td>
-                            {{rolProyecto.descripcion_rol}}
+                            {{data.descripcion_tipo_us}}
+                          </td>
+                          <td>
+                            {{data.prioridad_tipo_us}}
                           </td>
                         </tr>
                         {% endfor %}
