Cambios en el SideBar

--- a/sistema_metodos_agiles/webApp/templates/layouts/base.html
+++ b/sistema_metodos_agiles/webApp/templates/layouts/base.html
@@ -38,6 +38,8 @@
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="/static/assets/demo/demo.css" rel="stylesheet" />
   <!-- Specific Page CSS goes HERE  -->
+  <link href="/static/nav_arrow.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
   {% block stylesheets %}{% endblock stylesheets %}
 
 </head>
