--- a/sistema_metodos_agiles/webApp/templates/home/colaboradoresProyecto.html
+++ b/sistema_metodos_agiles/webApp/templates/home/colaboradoresProyecto.html
@@ -95,8 +95,8 @@
                             {{colaborador.descripcion_rol}}
                           </td>
                           <td>
-                            <form action="" method="post">
-                              <button type="submit" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></button>
+                            <form action="% url 'webApp:editarColaboradorProyecto' proyecto.id %}" method="post">
+                              <a type="submit" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
                             </form>
                             <form action="{% url 'webApp:eliminarColaboradorProyecto' proyecto.id %}" method="post">
                               {% csrf_token %}
